some icons experiments

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,3 +9,4 @@ ru:
     text_placeholder: Не сиди просто так, черкни пару строк
     send_by_enter: Enter отправляет сообщения
     send: Отправить
+    delete: Удалить к чертям
